# tester

try/folder/: client.py  critic.py  critic_server.py  llm_refiner.py  mcp_client.py  mcp_server.py  pyproject.toml  registry_server.py  requirements.txt  scrap.py
try/folder/server/: agent_executer.py  dynamic_scraper_tool.py  mcp_server.py  tools.py
try/folder/utils/: logger.py
