[project]
name = "folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "fpdf>=1.7.2",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
